--- a/src/app/livemap/livemap.component.css
+++ b/src/app/livemap/livemap.component.css
@@ -1,5 +1,5 @@
 .livemap-component {
-  margin-top: 1.5em;
+  margin-top: 10em;
 }
 img {
   height: 100%;
@@ -7,7 +7,7 @@ img {
 }
 
 agm-map {
-  height: 600px;
+  height: 635px;
 }
 
 .map-form {
