--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,23 +1,24 @@
 .register-component {
-  margin: 1em 30em 1em 30em;
+  margin: 12em 0em 0em 0em;
   padding: 2em 2em 2em 2em;
-  width: 30%;
   min-width: 25em;
 }
 .register-header {
   background-color: #b3ffcf;
   border-radius: 2cm 2cm 0 0;
   padding: 2em 4em 1em 4em;
+  text-align: center;
   min-width: 18em;
+  max-width: 100%;
 }
 .register-form {
   padding: 1em 1em 3em 1em;
   min-width: 18em;
-  border-radius: 0 0 2cm 2cm;
+  border-radius: 0 0 1cm 1cm;
+}
 
-  /* border-style: none solid solid solid;
-  border-width: 2px;
-  border-color: #bfbfbf; */
+.form-group {
+  width: auto;
 }
 
 .login-redirect {
